--- a/client/index.html
+++ b/client/index.html
@@ -20,11 +20,13 @@
   <script src="angular/angular.js" charset="utf-8"></script>
   <script src="angular-route/angular-route.js" charset="utf-8"></script>
   <script src="angular-cookies/angular-cookies.js"></script>
+  <script src="angular-pdf/dist/angular-pdf.js"></script>
   <!-- link front-end routes -->
   <script src="assets/app.js" charset="utf-8"></script>
   <!-- link factories and controllers -->
   <script src="assets/factories/welcomeFactory.js" charset="utf-8"></script>
   <script src="assets/controllers/welcomeController.js" charset="utf-8"></script>
+  <script src="assets/controllers/resumeController.js" charset="utf-8"></script>
 </head>
 
 <body>
