added portfolio page

--- a/client/index.html
+++ b/client/index.html
@@ -34,10 +34,12 @@
     <div class="nav-wrapper container">
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Home</a></li>
+        <li><a href="#!/portfolio">Portfolio</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
         <li><a href="#">Home</a></li>
+        <li><a href="#!/portfolio">Portfolio</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
